--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://likeMike001.github.io/mike-port",
+  "homepage": "https://VishnuDevi123.github.io/SuperIdol-port",
   "name": "port",
   "version": "0.1.0",
   "private": true,
@@ -7,18 +7,16 @@
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
-    "@tsparticles/react": "^3.0.0",
     "fragment": "^0.3.0",
     "framer-motion": "^11.2.11",
     "react": "^18.3.1",
     "react-confetti": "^6.1.0",
     "react-dom": "^18.3.1",
-    "react-particles": "^2.12.2",
     "react-router-dom": "^6.23.1",
     "react-scripts": "5.0.1",
     "react-tsparticles": "^2.12.2",
     "styled-components": "^6.1.11",
-    "tsparticles": "^3.4.0",
+    "tsparticles-slim": "^2.12.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
