--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://VishnuDevi123.github.io/SuperIdol-port",
+  "homepage": "https://VishnuDevi123.github.io/SuperIdol-Port",
   "name": "port",
   "version": "0.1.0",
   "private": true,
@@ -46,7 +46,7 @@
     ]
   },
   "devDependencies": {
-    "gh-pages": "^6.1.1",
+    "gh-pages": "^6.3.0",
     "tailwindcss": "^3.4.4"
   }
 }
